TAG: seqcacheload-tr8490-3
DATE: 07/2/2008
STAFF: sc
CHANGES: The latest algorithm

TAG: seqcacheload-tr8490-2
DATE: 02/28/2008
STAFF: sc
CHANGES:
1) updated genbank rep algo to allow longest genbank DNA seq to be rep
   genomic.

TAG: seqcacheload-tr8490-1
DATE: 02/08/2008
STAFF: sc
CHANGES:
1) seqcacheload - update representative sequence algorithm

TAG: seqcacheload-tr8490-BP
DATE: 02/08/2008
STAFF: sc
CHANGES: Branch point tag for change to rep genomic algorithm

TAG: seqcacheload-3-5-4-1
DATE: 12/28/2007
STAFF: sc
CHANGES: TR8704
1) seqdummy.py - Fix RefSeq dummy sequence type. 
   Set to 'Not Loaded' (_SequenceType_key=316349)
   it was inadvertently set to 'RNA' (_SequenceType_key=316346)

TAG: seqcacheload-3-5-1-9
DATE: 01/18/2007
STAFF: lec
CHANGES:
1) seqmarker.py; include withdrawn markers

TAG: seqcacheload-3-5-1-8
DATE: 01/02/2007
STAFF: lec
CHANGES:
1) TR8072; excluded deleted sequences from rep algorithm; seqmarker.py

TAG: seqcacheload-3-5-1-7
TAG: seqcacheload-3-5-1-6
DATE: 12/28/2006
STAFF: sc
CHANGES:
1) from each *.csh removed ".csh" from log filename and -x from top
2) index.html -added

TAG: seqcacheload-3-5-1-5
TAG: seqcacheload-3-5-1-4
DATE: 11/13/2006
STAFF: lec
CHANGES: 
1) TIGR to DFCI; use keys instead of labels

TAG: seqcacheload-3-5-1-3
DATE: 10/12/2006
STAFF: lec
CHANGES: 
1) TR 7894;mgiconfig

TAG: seqcacheload-3-5-1-2
DATE: 09/21/2006
STAFF: lec
CHANGES: 
1) TR 7894;mgiconfig

TAG: seqcacheload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: 
1) build 36; merge

TAG: seqcacheload-build36-7
DATE: 08/18/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: seqcacheload-build36-6
TAG: seqcacheload-build36-5
DATE: 08/14/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: seqcacheload-build36-4
DATE: 08/11/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: seqcacheload-build36-3
DATE: 07/27/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: seqcacheload-build36-2
DATE: 07/17/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: seqcacheload-build36-1
DATE: 07/12/2006
STAFF: lec